<resources>
    <string name="app_name">k15data</string>
    <string name="operation_title">Operation</string>
    <string name="upload_new_data">upload new data</string>
    <string name="view_uploaded_data">view previos uploaded</string>
    <string name="action_settings">Settings</string>
    <string name="resource_count">12</string>
    <string name="resource_count_name">contained photos</string>
    <string name="view_text">View description and photos</string>
    <string name="action_about">about</string>
    <string name="about_title">About</string>
    <string name="login_title">K15DATA <font fgcolor='@color/colorPrimaryDark'>LOGIN</font></string>
    <string name="about_head">k15 photos</string>
    <string name="savedData_title">Uploaded photos</string>
    <string name="upload_title">Uploading photos</string>
    <string name="copyrights">\u00a9 2017 k15.photos</string>
    <string name="upload">UPLOAD</string>
    <string name="forgot">Forgot password</string>
    <string name="username">Email</string>
    <string name="create">create account</string>
    <string name="login_button_name">LOGIN</string>
    <string name="password">password</string>
    <string name="about_message">k15data is app aimed for collecting information on any region while keeping information about location</string>
</resources>
