<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:background="@drawable/scrollable"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!-- forgot password or register -->
    </LinearLayout>

    <!-- fields container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp">

                    <AutoCompleteTextView
                        android:id="@+id/number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/bordered_shape"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/bordered_shape"
                        android:fontFamily="sans-serif-light"
                        android:hint="@string/password"
                        android:imeActionId="@+id/login"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background" />

                <LinearLayout
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:background="@android:color/white"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="@string/login_button_name"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/button6"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="18dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

</LinearLayout>
