<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.haikarose.k15data.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="12dp"
        android:id="@+id/upload"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/item_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginBottom="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="horizontal">
                        <TextView
                            android:textColor="@color/color_text_k15"
                            android:layout_width="wrap_content"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:fontFamily="sans-serif-light"
                            android:drawablePadding="0dp"
                            android:text="@string/operation_title"
                            android:id="@+id/uploader" />
                    </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="14sp"
                    android:gravity="left"
                    android:fontFamily="sans-serif-light"
                    android:autoLink="all"
                    android:textColorLink="@color/colorPrimary"
                    android:text="@string/upload_new_data"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="12dp"
        android:id="@+id/preview"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginBottom="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="horizontal">
                    <TextView
                        android:textColor="@color/color_text_k15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:drawablePadding="0dp"
                        android:text="@string/operation_title"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="14sp"
                    android:gravity="left"
                    android:fontFamily="sans-serif-light"
                    android:autoLink="all"
                    android:textColorLink="@color/colorPrimary"
                    android:text="@string/view_uploaded_data"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
