<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:elevation="4dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/emmanuel"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryAlpha"
                    android:textColor="@color/color_text_k15"
                    android:paddingBottom="12dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="sans-serif"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mr.Ferooz E."/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="180dp"
                android:layout_height="150dp">

                <ImageView
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/julius"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryAlpha"
                    android:textColor="@color/color_text_k15"
                    android:paddingBottom="12dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:fontFamily="sans-serif"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mr.Julius T."/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/item_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginBottom="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:textColor="@color/colorPrimaryDark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/about_head"
                            android:id="@+id/uploader" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:fontFamily="sans-serif-light"
                    android:autoLink="all"
                    android:text="@string/about_message"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/copyrights"
                        android:textColor="@android:color/white"
                        android:gravity="right" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>




